# rtag

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: objectnet.py
rtag/: main.py  utils.py
rtag/data/: imagenet-labels.txt
