[tool.poetry]
name = "rtag"
version = "0.1.0"
description = "AI-Powered Command-Line Photo Tagging Tool"
authors = ["Yurij Mikhalevich <yurij@mikhalevi.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yurijmikhalevich/rtag"
keywords = ["image tagging", "computer vision", "photography"]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10 <3.15"
rclip = "^2.1.2"
torch = [
  { version = "==2.10.0", source = "pypi", markers = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
  { version = "==2.10.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'" }
]
torchvision = [
  { version = "==0.25.0", source = "pypi", markers = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
  { version = "==0.25.0+cpu", source = "pytorch-cpu", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'" }
]
iptcinfo3 = "^2.1.4"
tqdm = "^4.65.0"

[tool.poetry.scripts]
rtag = "rtag.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
